create: products-section and sellers-section; add styles

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </ul>
         </div>
       </section>
-      <section class="ingredients-section">
+      <section class="ingredients-section padding-section">
         <div class="container">
           <h2 class="ingredients-title section-title">
             It all adds up to one exceptional
@@ -246,64 +246,224 @@
           </div>
         </div>
       </section>
-    </main>
-    <section class="chocolate-process-section">
-      <div class="container">
-        <h2 class="chocolate-process-title section-title">
-          HOW IT'S <span class="accent">MADE?</span>
-        </h2>
-        <div class="chocolate-process-flex-container">
-          <picture>
-            <source
-              media="(min-width: 1200px)"
-              srcset="
-                img/how-its-made/desktop/image_desk.jpg    1x,
-                img/how-its-made/desktop/image_desk@2x.jpg 2x
-              "
-            />
-            <source
-              media="(min-width: 768px)"
-              srcset="
-                img/how-its-made/tablet/image_tab.jpg    1x,
-                img/how-its-made/tablet/image_tab@2x.jpg 2x
-              "
-            />
-            <img
-              src="img/how-its-made/mobile/image_mob.jpg"
-              srcset="img/how-its-made/mobile/image_mob@2x.jpg 2x"
-              alt="A snapshot of chocolate making"
-              class="chocolate-process-image"
-            />
-          </picture>
-          <div class="chocolate-process-content">
-            <h3 class="chocolate-process-subtitle">
-              Try our chocolates today and discover the perfect balance of
-              flavor
-            </h3>
-            <ol class="chocolate-process-steps">
-              <li class="chocolate-process-step">
-                Heat the milk in a saucepan without bringing it to a boil. Add
-                sugar and cocoa powder.
-              </li>
-              <li class="chocolate-process-step">
-                At the same time, prepare a water bath. Melt the butter on it.
-              </li>
-              <li class="chocolate-process-step">
-                "Mix" the milk mixture and already liquid butter. Mix thoroughly
-                with a silicone spatula so that the mass becomes uniform and
-                silky.
-              </li>
-              <li class="chocolate-process-step">
-                Heat the mixture over low heat, letting it barely boil.
-              </li>
-              <li class="chocolate-process-step">
-                Pour the chocolate into special containers (can be replaced with
-                ice molds). Allow to cool and harden.
-              </li>
-            </ol>
+      <section class="chocolate-process-section padding-section">
+        <div class="container">
+          <h2 class="chocolate-process-title section-title">
+            HOW IT'S <span class="accent">MADE?</span>
+          </h2>
+          <div class="chocolate-process-flex-container">
+            <picture>
+              <source
+                media="(min-width: 1200px)"
+                srcset="
+                  img/how-its-made/desktop/image_desk.jpg    1x,
+                  img/how-its-made/desktop/image_desk@2x.jpg 2x
+                "
+              />
+              <source
+                media="(min-width: 768px)"
+                srcset="
+                  img/how-its-made/tablet/image_tab.jpg    1x,
+                  img/how-its-made/tablet/image_tab@2x.jpg 2x
+                "
+              />
+              <img
+                src="img/how-its-made/mobile/image_mob.jpg"
+                srcset="img/how-its-made/mobile/image_mob@2x.jpg 2x"
+                alt="A snapshot of chocolate making"
+                class="chocolate-process-image"
+              />
+            </picture>
+            <div class="chocolate-process-content">
+              <h3 class="chocolate-process-subtitle">
+                Try our chocolates today and discover the perfect balance of
+                flavor
+              </h3>
+              <ol class="chocolate-process-steps">
+                <li class="chocolate-process-step">
+                  Heat the milk in a saucepan without bringing it to a boil. Add
+                  sugar and cocoa powder.
+                </li>
+                <li class="chocolate-process-step">
+                  At the same time, prepare a water bath. Melt the butter on it.
+                </li>
+                <li class="chocolate-process-step">
+                  "Mix" the milk mixture and already liquid butter. Mix
+                  thoroughly with a silicone spatula so that the mass becomes
+                  uniform and silky.
+                </li>
+                <li class="chocolate-process-step">
+                  Heat the mixture over low heat, letting it barely boil.
+                </li>
+                <li class="chocolate-process-step">
+                  Pour the chocolate into special containers (can be replaced
+                  with ice molds). Allow to cool and harden.
+                </li>
+              </ol>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+      <section class="products-section padding-section">
+        <div class="container">
+          <h2 class="section-title">
+            Our <span class="accent">products</span>
+          </h2>
+          <ul class="products-list">
+            <li class="products-item">
+              <img
+                src="/img/products/img-1.jpg"
+                srcset="/img/products/img-1@2x.jpg 2x"
+                alt="Dark chocolate"
+                class="product-img"
+              />
+              <h3 class="product-title">orange</h3>
+              <p class="product-text">Dark chocolate</p>
+              <div class="product-price">45 UAH</div>
+            </li>
+            <li class="products-item">
+              <img
+                src="/img/products/img-2.jpg"
+                srcset="/img/products/img-2@2x.jpg 2x"
+                alt="Milk chocolate"
+                class="product-img"
+              />
+              <h3 class="product-title">APPLE&CRANBERRY</h3>
+              <p class="product-text">Milk chocolate</p>
+              <div class="product-price">50 UAH</div>
+            </li>
+            <li class="products-item">
+              <img
+                src="/img/products/img-3.jpg"
+                srcset="/img/products/img-3@2x.jpg 2x"
+                alt="Dark chocolate"
+                class="product-img"
+              />
+              <h3 class="product-title">lime&sea salt</h3>
+              <p class="product-text">Dark chocolate</p>
+              <div class="product-price">66 UAH</div>
+            </li>
+            <li class="products-item">
+              <img
+                src="/img/products/img-4.jpg"
+                srcset="/img/products/img-4@2x.jpg 2x"
+                alt="Dark chocolate"
+                class="product-img"
+              />
+              <h3 class="product-title">pineapple</h3>
+              <p class="product-text">Dark chocolate</p>
+              <div class="product-price">54 UAH</div>
+            </li>
+            <li class="products-item">
+              <img
+                src="/img/products/img-5.jpg"
+                srcset="/img/products/img-5@2x.jpg 2x"
+                alt="Milk chocolate"
+                class="product-img"
+              />
+              <h3 class="product-title">Classic</h3>
+              <p class="product-text">Milk chocolate</p>
+              <div class="product-price">45 UAH</div>
+            </li>
+            <li class="products-item">
+              <img
+                src="/img/products/img-6.jpg"
+                srcset="/img/products/img-6@2x.jpg 2x"
+                alt="Milk chocolate"
+                class="product-img"
+              />
+              <h3 class="product-title">honey</h3>
+              <p class="product-text">Milk chocolate</p>
+              <div class="product-price">50 UAH</div>
+            </li>
+            <li class="products-item">
+              <img
+                src="/img/products/img-7.jpg"
+                srcset="/img/products/img-7@2x.jpg 2x"
+                alt="Dark chocolate"
+                class="product-img"
+              />
+              <h3 class="product-title">Roasted fruits</h3>
+              <p class="product-text">Dark chocolate</p>
+              <div class="product-price">66 UAH</div>
+            </li>
+            <li class="products-item">
+              <img
+                src="/img/products/img-8.jpg"
+                srcset="/img/products/img-8@2x.jpg 2x"
+                alt="White chocolate"
+                class="product-img"
+              />
+              <h3 class="product-title">Classic</h3>
+              <p class="product-text">White chocolate</p>
+              <div class="product-price">54 UAH</div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="sellers-section padding-section">
+        <div class="container">
+          <h2 class="section-title"><span class="accent">Top</span> sellers</h2>
+
+          <div class="seller-cards-container">
+            <div class="seller-card-wrapper left-card">
+              <div class="overlay">
+                <img
+                  src="/img/sellers/choc&nuts.jpg"
+                  srcset="/img/sellers/choc&nuts@2x.jpg 2x"
+                  alt="CHOCOLATE WITH NUTS"
+                  class="seller-img"
+                />
+                <p class="seller-text">
+                  Chocolate with nuts is a delectable combination that brings
+                  together the smoothness of chocolate and the crunchiness of
+                  nuts. Whether it's milk chocolate, dark chocolate, or white
+                  chocolate, the addition of nuts adds a whole new dimension of
+                  flavor and texture.
+                </p>
+              </div>
+              <h3 class="seller-subtitle">CHOCOLATE WITH NUTS</h3>
+            </div>
+
+            <div class="seller-card-wrapper">
+              <div class="overlay">
+                <img
+                  src="/img/sellers/choc&fruits.jpg"
+                  srcset="/img/sellers/choc&fruits@2x.jpg 2x"
+                  alt="CHOCOLATE WITH FRUITS"
+                  class="seller-img"
+                />
+                <p class="seller-text">
+                  Chocolate with fruit is an unbeatable combination of two of
+                  the tastiest things in the world. This dessert combines
+                  delicate and aromatic chocolate with fresh and juicy fruits,
+                  creating a true poetry of taste.
+                </p>
+              </div>
+              <h3 class="seller-subtitle">CHOCOLATE WITH FRUITS</h3>
+            </div>
+
+            <div class="seller-card-wrapper right-card">
+              <div class="overlay">
+                <img
+                  src="/img/sellers/dark-chocolate.jpg"
+                  srcset="/img/sellers/dark-chocolate@2x.jpg 2x"
+                  alt="DARK CHOCOLATE"
+                  class="seller-img"
+                />
+                <p class="seller-text">
+                  Dark chocolate is a rich and indulgent treat that is beloved
+                  by many chocolate enthusiasts. It is made from cocoa beans,
+                  which are roasted, ground, and then processed to produce
+                  chocolate liquor. Dark chocolate contains a higher percentage
+                  of cocoa solids compared to milk chocolate.
+                </p>
+              </div>
+              <h3 class="seller-subtitle">DARK CHOCOLATE</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
